# PIMENTO

./: .gitignore  .pre-commit-config.yaml  README.md  pimento.py  pyproject.toml
.github/workflows/: lint-workflow.yml  pytest-workflow.yml  python-publish.yml
gigascience_manuscript_data/: README.md
gigascience_manuscript_data/manuscript_figures/figure8/: std_auto_primer_comparison.csv
gigascience_manuscript_data/supplementary_figures/S1/: benchmarking_runtimes_std.csv
gigascience_manuscript_data/supplementary_figures/S2/: benchmarking_runtimes_auto.csv
gigascience_manuscript_data/supplementary_figures/S3/: benchmarking_runtimes_are_there_primers.csv
pimento/: pimento.py  pimento_cli.py
standard_primers/: 18S.fasta  V1-V9.fasta  V3-V5.fasta  V4-V5.fasta  V4.fasta  V6-V9.fasta  V7-V9.fasta
tests/: test_threshold_parameters.py
tests/unit/: test_are_there_primers.yml  test_choose_primer_cutoff.yml  test_find_cutoffs.yml  test_generate_bcv.yml  test_primer_cutoff_strategy.yml  test_standard_primer_matching.yml
