[project]
name = "mi-pimento"
version = "1.1.0"
readme = "README.md"
license = {text = "Apache Software License 2.0"}
authors = [
  { name = "MGnify team", email = "metagenomics-help@ebi.ac.uk" },
]
keywords = ["bioinformatics", "pipelines", "metagenomics", "primers", "reads", "sequencing"]
description = "A PrIMEr infereNce TOolkit to facilitate large-scale calling of metabarcoding amplicon sequence variants"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "biopython==1.86",
    "numpy==2.5.1",
    "pandas==3.0.3",
    "regex==2026.7.10",
    "click==8.1.7",
    "pyfastx==2.3.1",
    "rich==13.9.4"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pimento",
            "pimento.bin",
            "pimento.standard_primers"]
[tool.setuptools.package-data]
"pimento.standard_primers" = ["*"]

[project.scripts]
pimento = "pimento.pimento_cli:cli"

[project.optional-dependencies]
tests = [
    "pytest==7.4.0",
    "pytest-md==0.2.0",
    "pytest-workflow==2.0.1",
    "biopython==1.86",
    "pandas==3.0.3",
    "numpy==2.5.1",
    "regex==2026.7.10",
    "click==8.1.7",
    "pyfastx==2.3.1",
    "rich==13.9.4"

]

dev = [
    "mi-pimento[tests]",
    "pre-commit==4.6.0",
    "black==24.8.0",
    "flake8==7.1.1",
    "pep8-naming==0.14.1"
]
